chore: update changelog and release 0.7.7

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
 
 # SDK
-sdkVersion=0.7.7-SNAPSHOT
+sdkVersion=0.7.7
 
 # kotlin
 kotlinVersion=1.6.10
