--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
 
 # SDK
-sdkVersion=0.7.7
+sdkVersion=0.7.8-SNAPSHOT
 
 # kotlin
 kotlinVersion=1.6.10
