--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -23,6 +23,14 @@ publishing {
                 password = project.findProperty("codeartifact.token") ?: System.getenv("CODEARTIFACT_TOKEN")
             }
         }
+        maven {
+            name = "bespokeS3"
+            url = "s3://bespoke-sdk-generation/release"
+            credentials(AwsCredentials) {
+                accessKey = project.findProperty("bespokeS3AccessKeyId")
+                secretKey = project.findProperty("bespokeS3SecretAccessKey")
+            }
+        }
     }
 
     publications.all {
@@ -68,6 +76,11 @@ publishing {
 
 tasks.register('publishToAwsCodeArtifact') {
     dependsOn 'publishAllPublicationsToAwsCodeArtifactRepository'
+    group 'publishing'
+}
+
+tasks.register('publishToBespokeS3') {
+    dependsOn 'publishAllPublicationsToBespokeS3Repository'
     group 'publishing'
 }
 
